--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -184,7 +184,6 @@ jobs:
           cd ..
           cd ..
           pwd
-          dir C:\"Program Files"\doxygen
           refreshenv
           echo "Updating all git submodules..."
           git submodule update --init --recursive
@@ -196,7 +195,7 @@ jobs:
           cmake --build ${{github.workspace}}/build --config ${{env.BUILD_TYPE}}
           dir ${{github.workspace}}/build/Release
           echo "Documenting..."
-          C:\"Program Files"\doxygen\bin\doxygen
+          doxygen
           echo "Packaging..."
           cd build
           cpack -V
