LaTeX command updated.

--- a/playpen/.SciTEUser.properties
+++ b/playpen/.SciTEUser.properties
@@ -1291,7 +1291,7 @@ command.go.subsystem.$(file.patterns.lisp)=0
 
 command.go.$(file.patterns.html)=$(SciteUserHome)/run_nwjs_application.sh $(FileNameExt) $(FileName) $(FileDir)
 
-command.build.$(file.patterns.tex)=pdflatex -synctex=1 --shell-escape -interact ion=nonstopmode $(FileNameExt)
+command.build.$(file.patterns.tex)=pwd && pdflatex $(FileNameExt)
 command.go.$(file.patterns.tex)=xdg-open $(FileName).pdf
 
 command.go.*.py=python3 -u "$(FileNameExt)"
