--- a/playpen/.SciTEUser.properties
+++ b/playpen/.SciTEUser.properties
@@ -1285,11 +1285,10 @@ command.subsystem.*.csd=2
 command.go.$(file.patterns.lisp)=sbcl --load $(FilePath)
 command.go.subsystem.$(file.patterns.lisp)=0
 
-# Commands for running HTML files with embedded Csound in NW.js.
-# You may need to modify this file for your environment, especially with 
-# respect to the path for NW.js, and the audio output options for NW.js.
+# Commands for running HTML files using a local Web server (assumed to already 
+# be running).
 
-command.go.$(file.patterns.html)=$(SciteUserHome)/run_nwjs_application.sh $(FileNameExt) $(FileName) $(FileDir)
+command.go.$(file.patterns.html)=python3 -m webbrowser -t http://localhost:8000/$(FileNameExt)
 
 command.build.$(file.patterns.tex)=pwd && pdflatex $(FileNameExt)
 command.go.$(file.patterns.tex)=xdg-open $(FileName).pdf
@@ -1368,3 +1367,9 @@ command.12.*=python3 ~/playpen.py man-python
 command.name.13.*=Reformat this source file using astyle
 command.subsystem.13=2
 command.13.*=python3 ~/playpen.py cpp-astyle
+
+command.name.14.*=Open this .html file using a local Web server
+command.subsystem.14=2
+command.14.*=python3 ~/playpen.py html-localhost "$(FileNameExt)"
+
+
