--- a/playpen/playpen.ini
+++ b/playpen/playpen.ini
@@ -32,6 +32,7 @@ gnome-theme=Yaru-dark
 # lower-case!
 editor-scheme=cobalt
 verbose=False
+www=~/cloud-music/docs
 
 # Basic C++ compiler command to build a program from one source file.
 # Source file and output name should NOT be specified, will be added later.
